[tool.black]
line-length = 88
target_version = ['py39', 'py310', "py311"]
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"

[tool.poetry]
name = "vault-cli"
version = "1.0.0"
description = "CLI to interact with vault."
authors = ["Meni Yakove", "Ruth Netser"]
readme = "README.md"
repository = "https://github.com/RedHatQE/vault_cli"

[tool.poetry.scripts]
vault_cli = "app.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
colorlog = "*"
click = "*"
hvac = "*"
pyyaml = "*"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
